src/layouts/InstrumentLayout/components/Header/Header.scss
.header {
  color: var(--colors-text-primary);
  display: grid;
  grid-template-columns: 1fr auto 1fr;
  align-items: start;
  column-gap: 40px;
  width: 100%;
  box-sizing: border-box;

  &__left {
    display: flex;
    gap: 24px;
  }

  &__center {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
  }

  &__logo-container {
    display: flex;
    align-items: center;
    gap: 12px;
  }

  &__logo {
    width: 40px;
    height: 40px;
    object-fit: contain;
  }

  &__project-name-container {
    cursor: pointer;
    min-height: 32px;
    display: flex;
    align-items: center;
    padding: 4px 8px;
    border-radius: 4px;
    transition: background-color 0.2s ease;

    &_hover-enabled:hover {
      background-color: var(--colors-text-primary);
    }

    &_editable {
      cursor: text;
      background-color: var(--colors-text-primary);
    }
  }

  &__project-name {
    font-family: var(--lato);
    font-size: 20px;
    display: flex;
    align-items: center;
    gap: 6px;
  }

  &__project-input {
    background: none;
    border: none;
    color: var(--colors-text-primary);
    font-family: var(--lato);
    font-size: 20px;
    outline: none;
    padding: 4px 8px;
    margin: 0;
    width: 200px;
    text-align: center;
    transition: all 0.2s ease;
  }

  &__controls {
    display: flex;
    gap: 36px;
  }

  &__right {
    display: flex;
    justify-content: flex-end;
    gap: 12px;
  }

  &__settings {
    color: var(--colors-text-primary);
  }

  &__buttons {
    display: flex;
    align-items: center;
    gap: 24px;
  }

  &__button {
    margin: 0;
    display: flex;
    justify-content: center;
    background: none;
    border: none;
  }

  &__icon {
    width: 32px;
    height: 32px;
    color: var(--colors-text-primary);
  }

  &__icon-pause {
    width: 50px;
  }

  &__inputs {
    display: flex;
    gap: 20px;
  }

  &__input-form {
    display: flex;
    align-items: center;
    text-transform: uppercase;
    font-size: 16px;
    color: var(--colors-ui-tertiary);
  }

  &__input {
    color: var(--colors-text-primary);
    background-color: var(--colors-bg-secondary);
    font-size: 20px;
    border: none;
    border-radius: 8px;
    max-width: 40px;
    padding: 6px 12px;
    text-align: center;
    margin-left: 16px;
  }

  &__left-item {
    width: fit-content;
    position: relative;
  }

  &__left-button {
    background: none;
    padding: 0;
    border: none;
    color: var(--colors-text-secondary);
    font-size: 24px;

    transition: color 0.1s ease;

    &:hover:not(&_active) {
      color: var(--colors-ui-primary);
    }

    &:active,
    &_active {
      color: var(--colors-ui-accent);
    }
  }

  &__left-button-modal {
    top: 40px;
    left: 0;
    min-width: 170px;
    z-index: 50;
  }

  &__second_left-item {
    width: fit-content;
    position: relative;
  }

  &__second_left-button {
    background: none;
    padding: 0;
    border: none;
    color: var(--colors-text-secondary);
    font-size: 24px;

    transition: color 0.1s ease;

    &:hover:not(&_active) {
      color: var(--colors-ui-primary);
    }

    &:active,
    &_active {
      color: var(--colors-ui-accent);
    }
  }

  &__second_left-button-modal {
    top: 40px;
    left: 0;
    min-width: 170px;
    z-index: 50;
  }

  &__right-button-modal {
    top: 50px;
    right: 0;
    min-width: 170px;
    z-index: 50;
  }

  &__inputs-left-button-sub-modal {
    width: 280px;
  }

  &__left-button-sub-modal {
    top: 0;
    left: 100%;
    margin-left: 20px;
    min-width: 170px;
  }

  &__right_profile {
    background: transparent;
    display: flex;
    border: none;
    color: var(--colors-text-primary);
    gap: 16px;
    cursor: pointer;
  }

  &__right_avatar {
    outline: 2px solid #041d32;
    width: 1.6rem;
    height: 1.6rem;
    border-radius: 0.5rem;
  }

  &__right_username {
    font-family: var(--lato-medium);
    font-size: 1rem;
  }
}

.modal__hotkey {
  color: #888;
  font-size: 12px;
  margin-left: 8px;
}

